[package]
name = "solana-escrow"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.18.9"
thiserror = "1.0.24"
spl-token = { version = "3.2.0", features = ["no-entrypoint"]}

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-logger = "=1.18.9"
solana-program-test = "=1.18.9"
solana-sdk = "=1.18.9"
solana-validator = "=1.18.9"

[lib]
crate-type = ["cdylib", "lib"]
